--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <title>Poker Client</title>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const socket = io('http://localhost');
+      const socket = io('http://localhost:3000');
     </script>
   </head>
 
