--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,16 +12,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Poker Client</title>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io('http://localhost:3000');
-    </script>
+    <script src="/socket.io/socket.io.js">console.log(3)</script>
   </head>
 
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="/lobby.js"></script>
     <div id="root"></div>
   </body>
 </html>
