--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Poker Client</title>
-    <script src="/socket.io/socket.io.js">console.log(3)</script>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
 
 
