aded type to script tag html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./Logo_blue.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PokerExpress</title>
-    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/babel" src="/socket.io/socket.io.js"></script>
   </head>
 
 
